# mlops-bootcamp-capstone-emails

./: .gitignore  README.md  docker-compose.yml
data/: create_csv.py
frontend/: package.json  tailwind.config.cjs
frontend/src/pages/: index.tsx
frontend/src/styles/: globals.css
infra/: backend.tf  config.tf  main.tf  outputs.tf  postgres.tf  variables.tf
k8s/: deployment.yaml  ingress.yaml  service.yaml
model/: .env.local  Dockerfile  README.md  entrypoint4jupyter.sh  pyproject.toml
model/src/: .main.py.swp  analysis.py  ejemplo.ipynb  example.ipynb  main.py  utils.py
