[tool.poetry]
name = "capstone-mlops-team7"
version = "0.1.0"
description = "Capstone project for MLOps Bootcamp"
authors = ["Team 7"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
nltk = "^3.7"
spacy = "^3.4.3"
vaderSentiment = "^3.3.2"
jupyter = "^1.0.0"
ipykernel = "^6.17.1"
jupyter-contrib-nbextensions = "^0.7.0"
ipywidgets = "^8.0.2"
plotnine = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
